<resources>
    <string name="app_name">EONET</string>
    <string name="google_android_map_api_key">AIzaSyAirZa-_u-ldads9vhm0BQiro8wkjoyrJw</string>
    <string name="title_events">Events</string>
    <string name="title_category">Category</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_event_found">No event found.</string>
    <string name="error_loading_events">Error loading events.</string>
    <string name="title_event_detail">Event Info</string>
    <string name="no_category_found">No category found</string>
    <string name="title_event_source">Event Source</string>
    <string name="event_data_not_found">Event Data not found</string>
    <string name="sources">Sources</string>
    <string name="description">Description</string>
    <string name="default_notification_channel_id">general</string>
    <string name="location">Location</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="offline_error_message">Your network is unavailable.\nCheck your data or wifi connection</string>
    <string name="data_load_error_message">There was an error loading your data.\nPlease try again later</string>
    <string name="ooops">Ooops!</string>
    <string name="empty_category_title">No category found</string>
    <string name="empty_event_title">No event found</string>
    <string name="empty_view_description">Go back and change the filter</string>
    <string name="title_filter">Filter Results</string>
</resources>
