<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.observe.eonet.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events">
        <action
            android:id="@+id/action_navigation_events_to_eventDetailFragment"
            app:destination="@id/eventDetailFragment" />
        <argument
            android:name="categoryId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.observe.eonet.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category">
        <action
            android:id="@+id/action_navigation_category_to_navigation_events"
            app:destination="@id/navigation_events" />
    </fragment>

    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="com.observe.eonet.ui.eventdetail.EventDetailFragment"
        android:label="@string/title_event_detail"
        tools:layout="@layout/event_detail_fragment">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>
</navigation>